# duoshao

./: .eslintrc.json  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: cd.yaml  lint.yaml  test-on-pr.yaml
src/: App.vue  main.js  storage.js  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  error.rs  loader.rs  main.rs  state.rs
src/components/: Generated.vue  GeneratedPanel.vue  Scratchpad.vue  ScratchpadPanel.vue  Sidebar.vue  SidebarContainer.vue  Topbar.vue  TopbarContainer.vue
src/components/bootstrap/: Count.vue  CountItem.vue  Definition.vue  DefinitionItem.vue  Select.vue  SelectItem.vue  SidebarItem.vue  Tag.vue  TagItem.vue  Textarea.vue  TextareaItem.vue
src/components/bootstrap/sidebar/: Item.vue
src/store/: index.js  note.js
