[package]
name = "app"
version = "0.1.4"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.61"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0.82"
serde = { version = "1.0.140", features = ["derive"] }
tauri = { version = "1.0.5", features = ["dialog-all", "fs-all"] }
anyhow = "1.0.58"
xuexi = { git = "https://github.com/shigedangao/xuexi", features = ["chinese", "laotian"], branch = "main" }
tokio = { version = "1.20.0", features = ["rt", "macros"] }

[dependencies.tauri-plugin-log]
git = "https://github.com/tauri-apps/tauri-plugin-log"
branch = "release"
features = ["colored"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
